# Guild-AI

./: .env.dev  .env.example  .gitignore  AGENTS.md  AGENT_CAPABILITIES.md  AGENT_PROMPTS.md  CHANGELOG.md  FRONTEND_README.md  LICENSE  NETLIFY_DEPLOYMENT_GUIDE.md  NEXT_STEPS_PROPOSAL.md  PROJECT_STATUS_SUMMARY.md  PROJECT_SUMMARY.md  README.md  VOICE_SYSTEM_README.md  WORKFLOW_BUILDER_README.md  debug.py  docker-compose.example.yml  docker-compose.test.yml  docker-compose.yml  settings.json  test_blueprint_engine.py  test_complete_system.py  test_computer_vision.py  test_local_markitdown.py  test_markitdown.py  test_new_skills.py  test_tango_learning.py  test_validation_framework.py  test_visual_automation.py  test_voice_system.py  test_workflow_builder.py  verify_rebuild.py
docs/: api.md  (+2 more)
guild/: pyproject.toml
guild/docs/: INTEGRATION_GUIDE.md  MARKITDOWN_INTEGRATION.md
guild/examples/: comprehensive_integration_example.py  markitdown_integration_example.py
guild/src/: tools.py
guild/src/agents/: accountability_coach_agent.py  accounting_agent.py  bookkeeping_agent.py  business_strategist.py  business_strategist_agent.py  chief_of_staff_agent.py  churn_predictor_agent.py  community_manager_agent.py  compliance_agent.py  content_strategist.py  copywriter.py  copywriter_agent.py  crm_agent.py  crm_automation_agent.py  customer_support_agent.py  enhanced_prompts.py  hiring_hr_agent.py  hr_agent.py  image_generation_agent.py  investor_relations_agent.py  judge_agent.py  lead_personalization_agent.py  marketing_agent.py  onboarding_agent.py  orchestrator_agent.py  outbound_sales_agent.py  outsourcing_agent.py  paid_ads_agent.py  partnerships_agent.py  pr_outreach_agent.py  pricing_agent.py  product_manager_agent.py  project_manager_agent.py  research_agent.py  research_scraper_agent.py  sales_funnel_agent.py  scraper_agent.py  seo_agent.py  skill_development_agent.py  strategic_sounding_board_agent.py  (+12 more)
guild/src/blueprints/: __init__.py  accounting_manager.yml  business_development_manager.yml  customer_success_manager.yml  lead_generation_manager.yml  market_intelligence_manager.yml  monthly_accounting_reconciliation.yml  pr_opportunities_manager.yml  social_media_manager.yml
guild/src/cli/: main.py
(+203 files in other folders)
